# flow

./: .gitignore  Cargo.toml  Makefile  run-test.sh  xinitrc
crates/flow/: Cargo.toml
crates/flow-config/: Cargo.toml
crates/flow-config/src/: ast.rs  config.rs  lexer.rs  lib.rs  parser.rs  profile.rs
crates/flow-core/: Cargo.toml
crates/flow-core/src/: connection.rs  keys.rs  lib.rs
crates/flow-inotify/: Cargo.toml
crates/flow-inotify/src/: lib.rs
crates/flow/src/: main.rs  wm.rs
src/: config.rs  connection.rs  environment.rs  key.rs  keyboard.rs  keys.rs  lib.rs  logger.rs  main.rs  window.rs  wm.rs  workspace.rs
src/binds/: mod.rs  spawn.rs
src/combos/: mod.rs  record.rs  spawn.rs  tree.rs
src/combos/handlers/: mod.rs  spawn.rs
