[package]
name = "flow"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
flow-config = { version = "0.1.0", path = "../flow-config" }
flow-core = { version = "0.1.0", path = "../flow-core" }
futures = "0.3.31"
log = { version = "0.4.27", features = ["std"] }
tokio = { version = "1.45.0", features = ["macros", "rt", "rt-multi-thread", "time"] }
x11rb-async = { version = "0.13.1", features = ["xkb"] }
